--- a/OpsManage/templates/cmdb/basicData/supplierManage.html
+++ b/OpsManage/templates/cmdb/basicData/supplierManage.html
@@ -19,13 +19,12 @@
 
 
 <ul  id="tabs">
-    <li><a href="http://127.0.0.1:8000/cmdb/orgManage" >组织机构</a></li>
-
-    <li><a href="http://127.0.0.1:8000/cmdb/idcManage" >机房管理</a></li>
-    <li><a href="http://127.0.0.1:8000/cmdb/userManage" >用户管理</a></li>
-    <li><a href="http://127.0.0.1:8000/cmdb/contractManage" >合同管理</a></li>
-    <li id="selectedTab"><a href="http://127.0.0.1:8000/cmdb/supplierManage" >供应商管理</a></li>
-    <li><a href="http://127.0.0.1:8000/cmdb/vendorManage" >厂商管理</a></li>
+    <li id="org"><a href="http://127.0.0.1:8000/cmdb/orgManage" >组织机构</a></li>
+    <li id="idc"> <a href="http://127.0.0.1:8000/cmdb/idcManage" >机房管理</a></li>
+    <li id="user"><a href="http://127.0.0.1:8000/cmdb/userManage" >用户管理</a></li>
+    <li id="contract"><a href="http://127.0.0.1:8000/cmdb/contractManage" >合同管理</a></li>
+    <li id="supplier"><a href="http://127.0.0.1:8000/cmdb/supplierManage" >供应商管理</a></li>
+    <li id="vendor"><a href="http://127.0.0.1:8000/cmdb/vendorManage" >厂商管理</a></li>
 </ul>
 
 <!-- content -->
@@ -109,3 +108,12 @@
 
 <!-- /content -->
 {% endblock main_content %}
+
+
+{% block foot_js %}
+<script>
+    $(document).ready(function () {
+        $("#supplier").attr("id", "current"); // Activate first tab
+    });
+</script>
+{% endblock foot_js %}
