--- a/OpsManage/templates/cmdb/ServerManage/asset.html
+++ b/OpsManage/templates/cmdb/ServerManage/asset.html
@@ -24,7 +24,7 @@
                     <!-- 查询所有 -->
                     <div class="col-sm-1">
                         <a href="/cmdb/addARecord">
-                            <button class="btn btn-success btn-sm">添加资产</button>
+                            <button class="btn btn-default btn-sm">添加资产</button>
                         </a>
                     </div>
                 <form id="filterForm">
@@ -61,7 +61,7 @@
                     </div>
                     <div class="col-sm-1">
                         <a href="/cmdb/asset/">
-                            <button class="btn  btn-sm">显示所有</button>
+                            <button class="btn  btn-sm btn-default">显示所有</button>
                         </a>
                     </div>
 
@@ -73,6 +73,7 @@
                 <div class="col-sm-2">
                     <form   class="input-group" method='get' action="/search/" target="_blank" id="searchForm">
                         <input class="form-control inline" type="search"  name="q"  placeholder="Search..." >
+                        <input style="display:none" >
                         <span class="input-group-btn" >
                             <button class="btn " type="button" value="Search" id="searchBtn" >
                                 <i class="fa fa-search"></i>
@@ -155,11 +156,11 @@
                         <span class="text text-right">每页显示</span>
                         <label for="page_len">
                             <select name="page_len" id="page_len" class="form-control m-b input-sm" >
-                                {% ifequal page_len '10' %}
-                                   <option value="10" selected>10</option>
-                                {% else %}
-                                    <option value="10">10</option>
-                                {% endifequal %}
+                                <!--{% ifequal page_len '10' %}-->
+                                   <!--<option value="10" selected>10</option>-->
+                                <!--{% else %}-->
+                                    <!--<option value="10">10</option>-->
+                                <!--{% endifequal %}-->
                                 {% ifequal page_len '20' %}
                                     <option value="20" selected>20</option>
                                 {% else %}
