--- a/OpsManage/templates/cmdb/basicData/contractManage.html
+++ b/OpsManage/templates/cmdb/basicData/contractManage.html
@@ -2,116 +2,144 @@
 
 
 {% block css_block %}
-    <link href="/static/dist/css/tab_css.css" type="text/css" rel="stylesheet">
-    <link href="/static/css/form2.css" type="text/css" rel="stylesheet">
-    <style>
-        #selectedTab a{
-            background: white;
-        }
-        #selectedTab a::after{
-            background: white;
-        }
-    </style>
+<link href="/static/dist/css/tab_css.css" type="text/css" rel="stylesheet">
+<!--<link href="/static/css/form2.css" type="text/css" rel="stylesheet">-->
+<!--<style>-->
+<!--#selectedTab a {-->
+<!--background: white;-->
+<!--}-->
+
+<!--#selectedTab a::after {-->
+<!--background: white;-->
+<!--}-->
+<!--</style>-->
 {% endblock css_block %}
 
 
 {% block main_content %}
 
-
-<ul  id="tabs">
-    <li id="org"><a href="http://127.0.0.1:8000/cmdb/orgManage" >组织机构</a></li>
-    <li id="idc"> <a href="http://127.0.0.1:8000/cmdb/idcManage" >机房管理</a></li>
-    <li id="user"><a href="http://127.0.0.1:8000/cmdb/userManage" >用户管理</a></li>
-    <li id="contract"><a href="http://127.0.0.1:8000/cmdb/contractManage" >合同管理</a></li>
-    <li id="supplier"><a href="http://127.0.0.1:8000/cmdb/supplierManage" >供应商管理</a></li>
-    <li id="vendor"><a href="http://127.0.0.1:8000/cmdb/vendorManage" >厂商管理</a></li>
+<ul id="tabs">
+    <li id="org"><a href="http://127.0.0.1:8000/cmdb/orgManage">组织机构</a></li>
+    <li id="idc"><a href="http://127.0.0.1:8000/cmdb/idcManage">机房管理</a></li>
+    <li id="user"><a href="http://127.0.0.1:8000/cmdb/userManage">用户管理</a></li>
+    <li id="contract"><a href="http://127.0.0.1:8000/cmdb/contractManage">合同管理</a></li>
+    <li id="supplier"><a href="http://127.0.0.1:8000/cmdb/supplierManage">供应商管理</a></li>
+    <li id="vendor"><a href="http://127.0.0.1:8000/cmdb/vendorManage">厂商管理</a></li>
 </ul>
 
-<!-- content -->
-<div class="row">
-        <div class="col-xs-12">
-            <div class="box">
-                <div class="box-body">
-                    <div id="contracManage">
-                                <section id="getintouch">
-                                    <div class="container">
-                                        <form method="post" action="contractManage">
-                                            <table class="table table-bordered table-hover" style="font-size: 0.9em;">
-                                                <thead>
-                                                <tr>
-                                                    <th class="text-center">选择</th>
-                                                    <th class="text-center">序号</th>
-                                                    <th class="text-center">合同编号</th>
-                                                    <th class="text-center">合同名称</th>
-                                                    <th class="text-center">合同内容</th>
-                                                    <th class="text-center">备注</th>
-                                                </tr>
-                                                </thead>
-                                                <tbody>
-                                                {% for i in contract %}
-                                                    <tr>
-                                                        <td class="text-center"><input type="checkbox" name="delete_contract" value="{{ i.pk }}"></td>
-                                                        <td class="text-center">{{ i.pk }}</td>
-                                                        <td class="text-center">{{ i.contract_number }}</td>
-                                                        <td class="text-center">{{ i.contract_name }}</td>
-                                                        <td class="text-left">{{ i.contract_content }}</td>
-                                                        <td class="text-center">{{ i.contract_memo }}</td>
-                                                    </tr>
-                                                {% endfor %}
-                                                </tbody>
-                                            </table>
-                                            <div class="row  clearfix">
-                                                <div class="span10 offset2" style="width: 100%">
-                                                    <input style="width: 80px;height: 40px;margin:0 auto;margin-top:20px;" type="submit"  class=" btn btn-block btn-danger " value="删除">
-                                                </div>
-                                            </div>
-                                        </form>
-                                        <hr>
-                                        <form class="contact" action="addContractSubmit" method="post" id="form" style="padding: 30px;margin:0 auto;">
-                                            <div class="row clearfix">
-                                                <div class="ctrl" style="width: 60%;margin:0 auto;">
-                                                    <label>合同编号</label>
-                                                    <input style="width: 66%;margin-left: 2em" type="text" name="number" placeholder="请输入合同编号">
-                                                </div>
-                                            </div>
-                                            <div class="row clearfix">
-                                                <div class="ctrl"  style="width: 60%;margin:0 auto;">
-                                                    <label>合同名称</label>
-                                                    <input style="width: 66%;margin-left: 2em" type="text" name="name" placeholder="请输入合同名称">
-                                                </div>
-                                            </div>
-                                            <div class="row clearfix">
-                                                <div class="ctrl"  style="width: 60%;margin:0 auto;">
-                                                    <label style="position: relative;top: -100px;">合同内容</label>
-                                                    <textarea style="width: 66%;margin-left: 2em;" id="content" name="content" rows="6" cols="6"></textarea>
-                            {#                        <input style="width: 66%;margin-left: 2em" type="text" name="name" placeholder="请输入合同名称">#}
-                                                </div>
-                                            </div>
-                                            <div class="row clearfix">
-                                                <div class="ctrl"  style="width: 60%;margin:0 auto;">
-                                                    <label>备注</label>
-                                                    <input style="width: 66%;margin-left: 4em" type="text" name="memo" placeholder="请输入备注">
-                                                </div>
-                                            </div>
-                                            <div class="row  clearfix">
-                                                <div class="span10 offset2" style="width: 100%">
-                                                    <input style="width: 80px;height: 40px;margin:0 auto;margin-top:20px;" type="submit"  class="submit btn btn-block btn-success " value="添加">
-                                                </div>
-                                            </div>
-                                        </form>
-                                    </div>
-                                </section>
-                            </div>
+<div class="box box-group bg-gray-light " style="min-height: 800px;padding-left: 10px;padding-right: 10px">
+    <div class="row" style="margin-top: 10px">
+
+        <div class="col-sm-8">
+            <div class="box " style="min-height: 550px">
+
+                <div class="box-header with-border">
+                    <h3 class="box-title">
+                        <i class="glyphicon  glyphicon-bookmark"></i>
+                        合同列表
+                    </h3>
                 </div>
+
+                <!-- 合同清单 -->
+                <form method="post" action="contractManage">
+                    <div class="box-body table-responsive ">
+                        <table class="table table-hover">
+                            <tr>
+                                <th>选择</th>
+                                <th>序号</th>
+                                <th>合同编号</th>
+                                <th>合同名称</th>
+                                <th>合同内容</th>
+                                <th>备注</th>
+                            </tr>
+
+                            {% for i in contract %}
+                            <tr>
+                                <td><input type="checkbox" name="delete_contract" value="{{ i.pk }}"></td>
+                                <td>{{ i.pk }}</td>
+                                <td>{{ i.contract_number }}</td>
+                                <td>{{ i.contract_name }}</td>
+                                <td>{{ i.contract_content }}</td>
+                                <td>{{ i.contract_memo }}</td>
+                            </tr>
+                            {% endfor %}
+
+                        </table>
+                    </div>
+
+
+                    <div class="box-footer " >
+                        <button type="submit" class="btn btn-default bottom">取消</button>
+                        <button type="submit" class="btn btn-info pull-right">删除</button>
+                    </div>
+                </form>
+
+            </div>
+            <!-- /.box -->
+        </div>
+
+        <!-- ---添加合同-- -->
+        <div class="col-sm-4">
+            <div class="box box-info">
+                <!-- box-header -->
+                <div class="box-header with-border">
+                    <i class="glyphicon glyphicon-plus"></i>
+                    <h3 class="box-title">添加合同</h3>
+                </div>
+                <!-- /.box-header -->
+
+                <!-- form start -->
+                <form class="form-horizontal" action="addContractSubmit" method="post" id="form">
+                    <div class="box-body">
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">合同名称</label>
+                            <div class="col-sm-9">
+                                <input class="form-control" type="text" name="name" placeholder="Contract number">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">合同编号</label>
+
+                            <div class="col-sm-9">
+                                <input class="form-control" type="text" name="number" placeholder="Contract name">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">合同内容</label>
+                            <div class="col-sm-9">
+                                <textarea class="form-control" name="content" rows="12"
+                                          placeholder="Enter ..."></textarea>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">备注</label>
+                            <div class="col-sm-9">
+                                <input class="form-control" type="text" name="memo" placeholder="Memo">
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- box-footer -->
+                    <div class="box-footer">
+                        <button type="submit" class="btn btn-default">取消</button>
+                        <button type="submit" class="btn btn-info pull-right">添加</button>
+                    </div>
+                    <!-- /.box-footer -->
+                </form>
+                <!-- /.form start -->
             </div>
         </div>
-</div>
 
-<!-- /content -->
+    </div>
+</div>
 {% endblock main_content %}
 
+
+
 {% block foot_js %}
-  <!-- ----tab效果---- -->
+<!-- ----tab效果---- -->
 <script>
     $(document).ready(function () {
         $("#contract").attr("id", "current"); // Activate first tab
