--- a/OpsManage/templates/cmdb/basicData/supplierManage.html
+++ b/OpsManage/templates/cmdb/basicData/supplierManage.html
@@ -2,115 +2,126 @@
 
 
 {% block css_block %}
-    <link href="/static/dist/css/tab_css.css" type="text/css" rel="stylesheet">
-    <link href="/static/css/form2.css" type="text/css" rel="stylesheet">
-    <style>
-        #selectedTab a{
-            background: white;
-        }
-        #selectedTab a::after{
-            background: white;
-        }
-    </style>
+<link href="/static/dist/css/tab_css.css" type="text/css" rel="stylesheet">
+<!--<link href="/static/css/form2.css" type="text/css" rel="stylesheet">-->
+<!--<style>-->
+<!--#selectedTab a {-->
+<!--background: white;-->
+<!--}-->
+
+<!--#selectedTab a::after {-->
+<!--background: white;-->
+<!--}-->
+<!--</style>-->
 {% endblock css_block %}
 
 
 {% block main_content %}
 
-
-<ul  id="tabs">
-    <li id="org"><a href="http://127.0.0.1:8000/cmdb/orgManage" >组织机构</a></li>
-    <li id="idc"> <a href="http://127.0.0.1:8000/cmdb/idcManage" >机房管理</a></li>
-    <li id="user"><a href="http://127.0.0.1:8000/cmdb/userManage" >用户管理</a></li>
-    <li id="contract"><a href="http://127.0.0.1:8000/cmdb/contractManage" >合同管理</a></li>
-    <li id="supplier"><a href="http://127.0.0.1:8000/cmdb/supplierManage" >供应商管理</a></li>
-    <li id="vendor"><a href="http://127.0.0.1:8000/cmdb/vendorManage" >厂商管理</a></li>
+<ul id="tabs">
+    <li id="org"><a href="http://127.0.0.1:8000/cmdb/orgManage">组织机构</a></li>
+    <li id="idc"><a href="http://127.0.0.1:8000/cmdb/idcManage">机房管理</a></li>
+    <li id="user"><a href="http://127.0.0.1:8000/cmdb/userManage">用户管理</a></li>
+    <li id="contract"><a href="http://127.0.0.1:8000/cmdb/contractManage">合同管理</a></li>
+    <li id="supplier"><a href="http://127.0.0.1:8000/cmdb/supplierManage">供应商管理</a></li>
+    <li id="vendor"><a href="http://127.0.0.1:8000/cmdb/vendorManage">厂商管理</a></li>
 </ul>
 
-<!-- content -->
-<div class="row">
-        <div class="col-xs-12">
-            <div class="box">
-                <div class="box-body">
-                    <div id="supplierManage" >
-                        <section id="getintouch">
-                            <div class="container">
-                                <form method="post" action="supplierManage">
-                                    <table class="table table-bordered table-hover" style="font-size: 0.9em;">
-                                        <thead>
-                                        <tr>
-                                            <th class="text-center">选择</th>
-                                            <th class="text-center">序号</th>
-                                            <th class="text-center">名称</th>
-                                            <th class="text-center">联系人</th>
-                                            <th class="text-center">电话</th>
-                                            <th class="text-center">备注</th>
-                                        </tr>
-                                        </thead>
-                                        <tbody>
-                                        {% for i in supplier %}
-                                            <tr>
-                                                <td class="text-center"><input type="checkbox" name="delete_supplier" value="{{ i.pk }}"></td>
-                                                <td class="text-center">{{ i.pk }}</td>
-                                                <td class="text-center">{{ i.supplier_name }}</td>
-                                                <td class="text-center">{{ i.supplier_contacts }}</td>
-                                                <td class="text-center">{{ i.supplier_phone }}</td>
-                                                <td class="text-center">{{ i.supplier_memo }}</td>
-                                            </tr>
-                                        {% endfor %}
-                                        </tbody>
-                                    </table>
-                                    <div class="row  clearfix">
-                                        <div class="span10 offset2" style="width: 100%">
-                                            <input style="width: 80px;height: 40px;margin:0 auto;margin-top:20px;" type="submit"  class=" btn btn-block btn-danger " value="删除">
-                                        </div>
-                                    </div>
-                                </form>
-                                <hr>
-                                <form class="contact" action="addSupplierSubmitM" method="post" id="form" style="padding: 30px;margin:0 auto;">
-                                    <div class="row clearfix">
-                                        <div class="ctrl" style="width: 60%;margin:0 auto;">
-                                            <label>供应商名称</label>
-                                            <input style="width: 66%;margin-left: 1em" type="text" name="name" placeholder="请输入供应商名称">
-                                        </div>
-                                    </div>
-                                    <div class="row clearfix">
-                                        <div class="ctrl"  style="width: 60%;margin:0 auto;">
-                                            <label>联系人</label>
-                                            <input style="width: 66%;margin-left: 3em" type="text" name="contact" placeholder="请输入联系人">
-                                        </div>
-                                    </div>
-                                    <div class="row clearfix">
-                                        <div class="ctrl"  style="width: 60%;margin:0 auto;">
-                                            <label>联系电话</label>
-                                            <input style="width: 66%;margin-left: 2em" type="text" name="phone" placeholder="请输入联系电话">
-                                        </div>
-                                    </div>
-                                    <div class="row clearfix">
-                                        <div class="ctrl"  style="width: 60%;margin:0 auto;">
-                                            <label>备注</label>
-                                            <input style="width: 66%;margin-left: 4em" type="text" name="memo" placeholder="请输入备注信息">
-                                        </div>
-                                    </div>
-                                    <div class="row  clearfix">
-                                        <div class="span10 offset2" style="width: 100%">
-                                            <input style="width: 80px;height: 40px;margin:0 auto;margin-top:20px;" type="submit"  class="submit btn btn-block btn-success " value="添加">
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                        </section>
-                    </div>
-                </div>
-            </div>
-        </div>
-</div>
+<div class="box box-group bg-gray-light " style="min-height: 800px;padding-left: 10px;padding-right: 10px">
+    <div class="row" style="margin-top: 10px">
 
-<!-- /content -->
+        <div class="col-sm-8">
+            <div class="box " >
+
+                <div class="box-header with-border">
+                    <h3 class="box-title">
+                        <i class="glyphicon  glyphicon-bookmark"></i>
+                        供应商列表
+                    </h3>
+                </div>
+
+                <!-- 供应商清单 -->
+                <form method="post" action="supplierManage">
+                    <div class="box-body table-responsive ">
+                        <table class="table table-hover">
+                            <tr>
+                                <th>选择</th>
+                                <th>序号</th>
+                                <th>名称</th>
+                                <th>联系人</th>
+                                <th>电话</th>
+                                <th>备注</th>
+                            </tr>
+
+                            {% for i in supplier %}
+                            <tr>
+                                <td><input type="checkbox" name="delete_supplier" value="{{ i.pk }}"></td>
+                                <td>{{ i.pk }}</td>
+                                <td>{{ i.supplier_name  }}</td>
+                                <td>{{ i.supplier_contacts }}</td>
+                                <td>{{ i.supplier_phone }}</td>
+                                <td>{{ i.supplier_memo }}</td>
+                            </tr>
+                            {% endfor %}
+
+                        </table>
+                    </div>
+                    <div class="box-footer " >
+                        <button type="submit" class="btn btn-danger pull-right">Delete</button>
+                    </div>
+                </form>
+
+            </div>
+            <!-- /.box -->
+        </div>
+
+        <!-- ---添加合同-- -->
+        <div class="col-sm-4">
+         <div class="box box-primary">
+            <div class="box-header with-border">
+              <i class="glyphicon glyphicon-plus"></i>
+              <h3 class="box-title">添加供应商</h3>
+            </div>
+            <!-- /.box-header -->
+            <!-- form start -->
+            <form role="form" class="contact" action="addSupplierSubmitM" method="post" id="form">
+              <div class="box-body">
+                <div class="form-group">
+                  <label for="suppliername">供应商名称</label>
+                  <input type="text" class="form-control" id="suppliername" name="name" placeholder="Supplier name">
+                </div>
+                <div class="form-group">
+                  <label for="suppliercontact">联系人</label>
+                  <input type="text" class="form-control" id="suppliercontact" name="contact" placeholder="Supplier contact">
+                </div>
+                <div class="form-group">
+                  <label for="phone">联系电话</label>
+                  <input type="text" class="form-control" id="phone" name="phone" placeholder="Phone">
+                </div>
+                <div class="form-group">
+                  <label for="memo">备注</label>
+                  <input type="text" class="form-control" id="memo" name="memo" placeholder="Memo">
+                </div>
+
+
+              </div>
+              <!-- /.box-body -->
+
+              <div class="box-footer">
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </div>
+            </form>
+          </div>
+        </div>
+
+    </div>
+</div>
 {% endblock main_content %}
 
 
+
 {% block foot_js %}
+<!-- ----tab效果---- -->
 <script>
     $(document).ready(function () {
         $("#supplier").attr("id", "current"); // Activate first tab
