--- a/OpsManage/templates/base.html
+++ b/OpsManage/templates/base.html
@@ -67,7 +67,7 @@ desired effect
     <header class="main-header">
 
         <!-- Logo -->
-        <a href="./index.html" class="logo">
+        <a href="/cmdb/" class="logo">
             <!-- mini logo for sidebar mini 50x50 pixels -->
             <span class="logo-mini"><b>O</b>ps</span>
             <!-- logo for regular state and mobile devices -->
@@ -160,11 +160,11 @@ desired effect
 
                 <!-- 资产管理  -->
                 <li class="treeview">
-                    <a href="/cmdb/">
-                        <i class="fa fa-cubes"></i>
-                        <span>资产管理</span>
-                        <i class="fa fa-angle-left pull-right"></i>
-                    </a>
+                        <a href="#">
+                            <i class="fa fa-cubes"></i>
+                            <span>资产管理</span>
+                            <i class="fa fa-angle-left pull-right"></i>
+                        </a>
                     <ul class="treeview-menu">
                         <li><a href="/cmdb/asset/"><i class="fa fa-circle-o"></i> 资产列表</a></li>
                         <li><a href="/cmdb/assetMap/"><i class="fa fa-circle-o"></i> 资产地图</a></li>
