--- a/OpsManage/templates/cmdb/assetMap.html
+++ b/OpsManage/templates/cmdb/assetMap.html
@@ -2,15 +2,7 @@
 
 
 {% block css_block %}
-    <link href="/static/dist/css/tab_css.css" type="text/css" rel="stylesheet">
-    <link href="/static/css/form2.css" type="text/css" rel="stylesheet">
-
-    <style>
-        h{
-            font-size: 1.2em;
-            font-weight:500;
-        }
-    </style>
+<link href="/static/dist/css/tab_css.css" type="text/css" rel="stylesheet">
 
 {% endblock css_block %}
 
@@ -18,78 +10,80 @@
 {% block main_content %}
 
 
-<!-- content -->
-<div class="row">
-        <div class="col-xs-12">
-            <div class="box">
-                <div class="box-body" style="padding: 30px 60px 60px">
-                    <h1 style="font-size: 1.5em;margin-bottom: 30px;">资产地图</h1>
-                    <div style="margin: 20px 0;width: 100%;">
-                        <h>中线局</h>
-                        <div style="margin: 10px 0;">
-                            {% for i in idcs %}
-                                {% if i.organization.org_name == '中线局'  %}
-                                    <a  target="_blank" href="http://127.0.0.1:8000/cmdb/cabDetail?idcId={{ i.id }}">{{ i.idc_name }}</a>
-                                    <span style="margin-right: 1em;">({{ i.organization.org_name }})</span>
-                                {% endif %}
-                            {% endfor %}
+<div class="box box-group bg-gray-light " style="min-height: 800px;padding-left: 10px;padding-right: 10px">
+    <div class="row" style="margin-top: 10px">
+
+        {% for idc in myIdcs %}
+        <div class="col-sm-6">
+            <div class="box box-warning">
+                <!-- .box-header -->
+                <div class="box-header with-border ">
+                    <span class="glyphicon glyphicon-home"></span>
+                    <h3 class="box-title">{{ idc.idc_name }}</h3>
+                    <span class="fa fa-edit btn pull-right no-margin no-padding" style="font-size: 18px"
+                            onclick="window.open('http://127.0.0.1:8000/cmdb/editIdc?idcId={{ idc.id }}')">
+                    </span>
+                </div>
+                <!-- /.box-header -->
+
+                <!-- .box-body -->
+                <div class="box-body">
+                    <div class="row">
+                        <div class="col-sm-4 border-right" style="min-height: 150px">
+                            <span style="line-height: 30px">机房名称 :</span>
+                            <span style="line-height: 30px">{{ idc.idc_name}}</span><br>
+                            <span style="line-height: 30px">机房地址 :</span>
+                            <span style="line-height: 30px">{{ idc.idc_address}}</span><br>
+                            <span style="line-height: 30px">备注信息 :</span>
+                            <span style="line-height: 30px">{{ idc.idc_memo}}</span><br>
                         </div>
-                    </div>
-                    <div style="margin: 20px 0">
-                        <h>北京分局</h>
-                        <div style="margin: 10px 0;">
-                            {% for i in idcs %}
-                                {% if i.organization.org_name == '北京分局'%}
-                                    <a  target="_blank" href="http://127.0.0.1:8000/cmdb/cabDetail?idcId={{ i.id }}">{{ i.idc_name }}</a>
-                                    <span style="margin-right: 1em;">({{ i.organization.org_name }})</span>
-                                {% elif  i.organization.parent_org.org_name == '北京分局'%}
-                                    <a  target="_blank" href="http://127.0.0.1:8000/cmdb/cabDetail?idcId={{ i.id }}">{{ i.idc_name }}</a>
-                                    <span style="margin-right: 1em;">({{ i.organization.org_name }})</span>
-                                {% elif  i.organization.parent_org.parent_org.org_name == '北京分局'%}
-                                    <a  target="_blank" href="http://127.0.0.1:8000/cmdb/cabDetail?idcId={{ i.id }}">{{ i.idc_name }}</a>
-                                    <span style="margin-right: 1em;">({{ i.organization.org_name }})</span>
-                                {% endif %}
-                            {% endfor %}
+
+                        <div class="col-sm-8" >
+                            <div id="{{ idc.id }}">
+                            <span>机柜信息 :</span><br>
+
+
+
+                            {% if cabFlag %}
+                                {% for c in myCabs %}
+                                    <label class="label label-default" style="font-size: 13px;width: 65px;display: inline-block">{{ c.cabinet_name }}</label>
+                                {% endfor %}
+
+                                <br><button class="btn btn-xs btn-primary margin-r-5 pull-right" onclick="window.open('http://127.0.0.1:8000/cmdb/cabDetail?idcId={{ idc.id }}')">机柜图</button>
+
+                                <!--<a target="blank" href="http://127.0.0.1:8000/cmdb/editCab?idcId={{ idc.id }}">-->
+                                    <!--<button class="btn btn-xs btn-warning margin-r-5 pull-right" >编辑</button>-->
+                                <!--</a>-->
+
+
+                                <!--<a class="btn btn-xs pull-right" onclick="$('#{{ idc.id }}').load(window.location.href+ ' #{{ idc.id }}')">-->
+                                    <!--<i class="fa fa-fw fa-refresh"></i>-->
+                                <!--</a>-->
+                            {% else %}
+                                <a onclick="var test = window.location.href;if(test.split('?')[1]) url=test+'&IDC={{ idc.id }}'; else url=test+'?IDC={{ idc.id }}';$('#{{ idc.id }}').load(url+ ' #{{ idc.id }}');"
+                                    class="text-center">展示或编辑机柜信息</a>
+
+                            {% endif %}
                         </div>
-                    </div>
-                    <div style="margin: 20px 0">
-                        <h>天津分局</h>
-                        <div style="margin: 10px 0;">
-                            {% for i in idcs %}
-                                {% if i.organization.org_name == '天津分局'%}
-                                    <a  target="_blank" href="http://127.0.0.1:8000/cmdb/cabDetail?idcId={{ i.id }}">{{ i.idc_name }}</a>
-                                    <span style="margin-right: 1em;">({{ i.organization.org_name }})</span>
-                                {% elif  i.organization.parent_org.org_name == '天津分局'%}
-                                    <a  target="_blank" href="http://127.0.0.1:8000/cmdb/cabDetail?idcId={{ i.id }}">{{ i.idc_name }}</a>
-                                    <span style="margin-right: 1em;">({{ i.organization.org_name }})</span>
-                                {% elif  i.organization.parent_org.parent_org.org_name == '天津分局'%}
-                                    <a  target="_blank" href="http://127.0.0.1:8000/cmdb/cabDetail?idcId={{ i.id }}">{{ i.idc_name }}</a>
-                                    <span style="margin-right: 1em;">({{ i.organization.org_name }})</span>
-                                {% endif %}
-                            {% endfor %}
                         </div>
+
                     </div>
-                    <div style="margin: 20px 0">
-                        <h>河北分局</h>
-                        <div style="margin: 10px 0;">
-                            {% for i in idcs %}
-                                {% if i.organization.org_name == '河北分局'%}
-                                    <a  target="_blank" href="http://127.0.0.1:8000/cmdb/cabDetail?idcId={{ i.id }}">{{ i.idc_name }}</a>
-                                    <span style="margin-right: 1em;">({{ i.organization.org_name }})</span>
-                                {% elif  i.organization.parent_org.org_name == '河北分局'%}
-                                    <a  target="_blank" href="http://127.0.0.1:8000/cmdb/cabDetail?idcId={{ i.id }}">{{ i.idc_name }}</a>
-                                    <span style="margin-right: 1em;">({{ i.organization.org_name }})</span>
-                                {% elif  i.organization.parent_org.parent_org.org_name == '河北分局'%}
-                                    <a  target="_blank" href="http://127.0.0.1:8000/cmdb/cabDetail?idcId={{ i.id }}">{{ i.idc_name }}</a>
-                                    <span style="margin-right: 1em;">({{ i.organization.org_name }})</span>
-                                {% endif %}
-                            {% endfor %}
-                        </div>
-                    </div>
-                 </div>
+                    <!-- /.row  -->
+                </div>
             </div>
         </div>
-</div>
+        {% endfor %}
 
-<!-- /content -->
+    </div>
+</div>
 {% endblock main_content %}
+
+
+{% block foot_js %}
+<!-- ----tab效果---- -->
+<script>
+    $(document).ready(function () {
+        $("#idc").attr("id", "current"); // Activate first tab
+    });
+</script>
+{% endblock foot_js %}
