--- a/OpsManage/templates/cmdb/basicData/contractManage.html
+++ b/OpsManage/templates/cmdb/basicData/contractManage.html
@@ -31,11 +31,11 @@
     <div class="row" style="margin-top: 10px">
 
         <div class="col-sm-8">
-            <div class="box">
+            <div class="box box-warning">
 
                 <div class="box-header with-border">
                     <h3 class="box-title">
-                        <i class="glyphicon  glyphicon-bookmark"></i>
+                        <i class="glyphicon  glyphicon-file"></i>
                         合同列表
                     </h3>
                 </div>
@@ -79,7 +79,7 @@
 
         <!-- ---添加合同-- -->
         <div class="col-sm-4">
-            <div class="box box-info">
+            <div class="box box-primary">
                 <!-- box-header -->
                 <div class="box-header with-border">
                     <i class="glyphicon glyphicon-plus"></i>
@@ -122,7 +122,7 @@
 
                     <!-- box-footer -->
                     <div class="box-footer">
-                        <button type="submit" class="btn btn-info pull-right">Submit</button>
+                        <button type="submit" class="btn btn-primary pull-right">Submit</button>
                     </div>
                     <!-- /.box-footer -->
                 </form>
