--- a/OpsManage/templates/cmdb/basicData/idcManage.html
+++ b/OpsManage/templates/cmdb/basicData/idcManage.html
@@ -2,82 +2,93 @@
 
 
 {% block css_block %}
-    <link href="/static/dist/css/tab_css.css" type="text/css" rel="stylesheet">
-    <link href="/static/css/form2.css" type="text/css" rel="stylesheet">
-    <style>
-        #selectedTab a{
-            background: white;
-        }
-        #selectedTab a::after{
-            background: white;
-        }
-    </style>
+<link href="/static/dist/css/tab_css.css" type="text/css" rel="stylesheet">
 
 {% endblock css_block %}
 
 
 {% block main_content %}
 
-
-<ul  id="tabs">
-    <li id="org"><a href="http://127.0.0.1:8000/cmdb/orgManage" >组织机构</a></li>
-    <li id="idc"> <a href="http://127.0.0.1:8000/cmdb/idcManage" >机房管理</a></li>
-    <li id="user"><a href="http://127.0.0.1:8000/cmdb/userManage" >用户管理</a></li>
-    <li id="contract"><a href="http://127.0.0.1:8000/cmdb/contractManage" >合同管理</a></li>
-    <li id="supplier"><a href="http://127.0.0.1:8000/cmdb/supplierManage" >供应商管理</a></li>
-    <li id="vendor"><a href="http://127.0.0.1:8000/cmdb/vendorManage" >厂商管理</a></li>
+<ul id="tabs">
+    <li id="org"><a href="http://127.0.0.1:8000/cmdb/orgManage">组织机构</a></li>
+    <li id="idc"><a href="http://127.0.0.1:8000/cmdb/idcManage">机房管理</a></li>
+    <li id="user"><a href="http://127.0.0.1:8000/cmdb/userManage">用户管理</a></li>
+    <li id="contract"><a href="http://127.0.0.1:8000/cmdb/contractManage">合同管理</a></li>
+    <li id="supplier"><a href="http://127.0.0.1:8000/cmdb/supplierManage">供应商管理</a></li>
+    <li id="vendor"><a href="http://127.0.0.1:8000/cmdb/vendorManage">厂商管理</a></li>
 </ul>
 
-<!-- content -->
-<div class="row">
-        <div class="col-xs-12">
-            <div class="box">
-                <div class="box-body">
+<div class="box box-group bg-gray-light " style="min-height: 800px;padding-left: 10px;padding-right: 10px">
+    <div class="row" style="margin-top: 10px">
 
-                    {% for idc in myIdcs %}
-                        <div class="mybox mybox-teal" style="margin:2em;float:left;width: 40%;height: 240px;">
-                            <div class="mybox-header">
-                                <label for="CPU">{{ idc.idc_name }}</label>
-                            </div>
-                            <div class="mybox-body" style="height: 240px;">
-                                <div style="float: left;width: 100%;line-height: 2em;">
-                                    <label>机房名称 :</label>
-                                    <span style="margin-left: 1em">{{ idc.idc_name}}</span><br>
-                                    <label>机房地址 :</label>
-                                    <span style="margin-left: 1em">{{ idc.idc_address}}</span><br>
-                                    <label>备注信息 :</label>
-                                    <span style="margin-left: 1em">{{ idc.idc_memo}}</span><br>
-                                    <div id="{{ idc.id }}">
-                                        <label>机柜信息 :</label>
-                                        {% if cabFlag %}
-                                            {% for c in myCabs %}
-                                                <span style="margin-left: 1em">{{ c.cabinet_name }}</span>
-                                            {% endfor %}
-                                            <a onclick="window.open('http://127.0.0.1:8000/cmdb/cabDetail?idcId={{ idc.id }}')" style="margin-left: 1em">机柜图</a>
-                                            <a target="_blank" href="http://127.0.0.1:8000/cmdb/editCab?idcId={{ idc.id }}"  style="margin-left: 1em"><i class="fa fa-edit">编辑</i></a>
-                                            <a style="margin-left: 0.5em" onclick="$('#{{ idc.id }}').load(window.location.href+ ' #{{ idc.id }}')"><i class="fa fa-fw fa-refresh"></i></a>
-                                        {% else %}
-                                            <a onclick="var test = window.location.href;if(test.split('?')[1]) url=test+'&IDC={{ idc.id }}'; else url=test+'?IDC={{ idc.id }}';$('#{{ idc.id }}').load(url+ ' #{{ idc.id }}');" style="margin-left: 1em;line-height: 20px;" class="text-center">展示或编辑机柜信息</a>
-                                        {% endif %}
-                                    </div>
-                                </div>
-                                <button onclick="window.open('http://127.0.0.1:8000/cmdb/editIdc?idcId={{ idc.id }}')" style="position: absolute;left:85%;width: 10%;">编 辑</button>
-                            </div>
+        {% for idc in myIdcs %}
+        <div class="col-sm-6">
+            <div class="box box-warning">
+                <!-- .box-header -->
+                <div class="box-header with-border ">
+                    <span class="glyphicon glyphicon-home"></span>
+                    <h3 class="box-title">{{ idc.idc_name }}</h3>
+                    <span class="fa fa-edit btn pull-right no-margin no-padding" style="font-size: 18px"
+                            onclick="window.open('http://127.0.0.1:8000/cmdb/editIdc?idcId={{ idc.id }}')">
+                    </span>
+                </div>
+                <!-- /.box-header -->
+
+                <!-- .box-body -->
+                <div class="box-body">
+                    <div class="row">
+                        <div class="col-sm-4 border-right" style="min-height: 150px">
+                            <span style="line-height: 30px">机房名称 :</span>
+                            <span style="line-height: 30px">{{ idc.idc_name}}</span><br>
+                            <span style="line-height: 30px">机房地址 :</span>
+                            <span style="line-height: 30px">{{ idc.idc_address}}</span><br>
+                            <span style="line-height: 30px">备注信息 :</span>
+                            <span style="line-height: 30px">{{ idc.idc_memo}}</span><br>
                         </div>
-                    {% endfor %}
-                    <div style="clear: left"></div>
-                    <button onclick="window.open('http://127.0.0.1:8000/cmdb/addIdc')" style="margin-top:2em; margin-left:3em;width:100px;margin-bottom: 30px" class="btn btn-block btn-success">添加机房</button>
+
+                        <div class="col-sm-8" >
+                            <div id="{{ idc.id }}">
+                            <span>机柜信息 :</span><br>
+
+
+
+                            {% if cabFlag %}
+                                {% for c in myCabs %}
+                                    <label class="label label-default" style="font-size: 13px;width: 65px;display: inline-block">{{ c.cabinet_name }}</label>
+                                {% endfor %}
+
+                                <br><button class="btn btn-xs btn-primary margin-r-5 pull-right" onclick="window.open('http://127.0.0.1:8000/cmdb/cabDetail?idcId={{ idc.id }}')">机柜图</button>
+
+                                <a target="blank" href="http://127.0.0.1:8000/cmdb/editCab?idcId={{ idc.id }}">
+                                    <button class="btn btn-xs btn-warning margin-r-5 pull-right" >编辑</button>
+                                </a>
+
+
+                                <a class="btn btn-xs pull-right" onclick="$('#{{ idc.id }}').load(window.location.href+ ' #{{ idc.id }}')">
+                                    <i class="fa fa-fw fa-refresh"></i>
+                                </a>
+                            {% else %}
+                                <a onclick="var test = window.location.href;if(test.split('?')[1]) url=test+'&IDC={{ idc.id }}'; else url=test+'?IDC={{ idc.id }}';$('#{{ idc.id }}').load(url+ ' #{{ idc.id }}');"
+                                    class="text-center">展示或编辑机柜信息</a>
+
+                            {% endif %}
+                        </div>
+                        </div>
+
+                    </div>
+                    <!-- /.row  -->
                 </div>
             </div>
+        </div>
+        {% endfor %}
+
     </div>
 </div>
-
-<!-- /content -->
 {% endblock main_content %}
 
 
 {% block foot_js %}
-  <!-- ----tab效果---- -->
+<!-- ----tab效果---- -->
 <script>
     $(document).ready(function () {
         $("#idc").attr("id", "current"); // Activate first tab
