--- a/OpsManage/templates/cmdb/basicData/vendorManage.html
+++ b/OpsManage/templates/cmdb/basicData/vendorManage.html
@@ -31,11 +31,11 @@
     <div class="row" style="margin-top: 10px">
 
         <div class="col-sm-8">
-            <div class="box " >
+            <div class="box box-warning " >
 
                 <div class="box-header with-border">
                     <h3 class="box-title">
-                        <i class="glyphicon  glyphicon-bookmark"></i>
+                        <i class="glyphicon  glyphicon-tag"></i>
                         供应商列表
                     </h3>
                 </div>
@@ -102,7 +102,7 @@
               <!-- /.box-body -->
 
               <div class="box-footer">
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary pull-right">Submit</button>
               </div>
             </form>
           </div>
