--- a/OpsManage/templates/cmdb/basicData/contractManage.html
+++ b/OpsManage/templates/cmdb/basicData/contractManage.html
@@ -88,35 +88,27 @@
                 <!-- /.box-header -->
 
                 <!-- form start -->
-                <form class="form-horizontal" action="addContractSubmit" method="post" id="form">
+                <form class="contactl" action="addContractSubmit" method="post" id="form">
                     <div class="box-body">
                         <div class="form-group">
-                            <label class="col-sm-3 control-label">合同名称</label>
-                            <div class="col-sm-9">
-                                <input class="form-control" type="text" name="name" placeholder="Contract number">
-                            </div>
+                            <label class=" control-label">合同名称</label>
+                            <input class="form-control" type="text" name="name" placeholder="Contract number">
                         </div>
 
                         <div class="form-group">
-                            <label class="col-sm-3 control-label">合同编号</label>
-
-                            <div class="col-sm-9">
-                                <input class="form-control" type="text" name="number" placeholder="Contract name">
-                            </div>
+                            <label class="control-label">合同编号</label>
+                            <input class="form-control" type="text" name="number" placeholder="Contract name">
                         </div>
 
                         <div class="form-group">
-                            <label class="col-sm-3 control-label">合同内容</label>
-                            <div class="col-sm-9">
-                                <textarea class="form-control" name="content" rows="12"
+                            <label class=" control-label">合同内容</label>
+                            <textarea class="form-control" name="content" rows="12"
                                           placeholder="Enter ..."></textarea>
-                            </div>
                         </div>
+
                         <div class="form-group">
-                            <label class="col-sm-3 control-label">备注</label>
-                            <div class="col-sm-9">
-                                <input class="form-control" type="text" name="memo" placeholder="Memo">
-                            </div>
+                            <label class=" control-label">备注</label>
+                            <input class="form-control" type="text" name="memo" placeholder="Memo">
                         </div>
                     </div>
 
