--- a/OpsManage/templates/cmdb/index.html
+++ b/OpsManage/templates/cmdb/index.html
@@ -3,27 +3,27 @@
 
 {% block main_content %}
 <div class="row">
-    <div >
-          <div class="col-md-4">
-          <div class="info-box bg-red">
-            <span class="info-box-icon"><i class="fa fa-cubes"></i></span>
+    <!--<div >-->
+          <!--<div class="col-md-4">-->
+          <!--<div class="info-box bg-red">-->
+            <!--<span class="info-box-icon"><i class="fa fa-cubes"></i></span>-->
 
-            <div class="info-box-content">
-              <span class="info-box-text">中线局(京津冀)IT资产总数</span>
-              <span class="info-box-number text-center" style="font-size: 20px;"> {{asset_total}}</span>
+            <!--<div class="info-box-content">-->
+              <!--<span class="info-box-text">中线局(京津冀)IT资产总数</span>-->
+              <!--<span class="info-box-number text-center" style="font-size: 20px;"> {{asset_total}}</span>-->
 
-              <div class="progress">
-                <div class="progress-bar" style="width: 100%"></div>
-              </div>
-                  <span class="progress-description" style="font-size: 14px">
-                    服务器设备、存储设备、网络设备、安全设备
-                  </span>
-            </div>
-            <!-- /.info-box-content -->
-          </div>
-          <!-- /.info-box -->
-        </div>
-    </div >
+              <!--<div class="progress">-->
+                <!--<div class="progress-bar" style="width: 100%"></div>-->
+              <!--</div>-->
+                  <!--<span class="progress-description" style="font-size: 14px">-->
+                    <!--服务器设备、存储设备、网络设备、安全设备-->
+                  <!--</span>-->
+            <!--</div>-->
+            <!--&lt;!&ndash; /.info-box-content &ndash;&gt;-->
+          <!--</div>-->
+          <!--&lt;!&ndash; /.info-box &ndash;&gt;-->
+        <!--</div>-->
+    <!--</div >-->
 
     <!--<div>-->
         <!--<div class="col-md-1">-->
@@ -33,9 +33,9 @@
 
 
     <div>
-        <div class="col-md-2">
+        <div class="col-md-3">
           <div class="info-box">
-            <span class="info-box-icon bg-purple"><i class="fa fa-server"></i></span>
+            <span class="info-box-icon bg-purple"><i class="fa fa-server " ></i></span>
             <div class="info-box-content">
               <span class="info-box-text">服务器</span>
               <span class="info-box-number text-center" style="font-size: 24px;line-height: 45px"">{{server_total}}</span>
@@ -49,7 +49,7 @@
 
 
     <div >
-         <div class="col-md-2">
+         <div class="col-md-3">
           <div class="info-box">
             <span class="info-box-icon bg-yellow"><i class="fa fa-sitemap"></i></span>
 
@@ -65,7 +65,7 @@
 
 
     <div >
-        <div class="col-md-2">
+        <div class="col-md-3">
           <div class="info-box">
             <span class="info-box-icon bg-aqua"><i class="fa fa-shield"></i></span>
 
@@ -82,7 +82,7 @@
 
 
     <div >
-        <div class="col-md-2">
+        <div class="col-md-3">
           <div class="info-box">
             <span class="info-box-icon bg-green"><i class="fa fa-database"></i></span>
 
