--- a/OpsManage/templates/base.html
+++ b/OpsManage/templates/base.html
@@ -59,7 +59,7 @@ desired effect
 |---------------------------------------------------------|
 -->
 
-<body class="hold-transition  skin-blue-light  sidebar-mini ">
+<body class="hold-transition  skin-blue-light  sidebar-mini sidebar-collapse ">
 <div class="wrapper">
 
     <!--  ---------------------------------------------------------- -->
@@ -250,16 +250,16 @@ desired effect
     <div class="content-wrapper">
         <!-- Content Header (Page header) -->
         {% block pageheader %}
-{#        <section class="content-header">#}
-{#            <h1>#}
-{#                Page Header#}
-{#                <small>Optional description</small>#}
-{#            </h1>#}
-{#            <ol class="breadcrumb">#}
-{#                <li><a href="#"><i class="fa fa-dashboard"></i> Level</a></li>#}
-{#                <li class="active">Here</li>#}
-{#            </ol>#}
-{#        </section>#}
+       <!--<section class="content-header">-->
+           <!--<h1>-->
+              <!--Page Header-->
+                <!--<small>Optional description</small>-->
+            <!--</h1>-->
+            <!--<ol class="breadcrumb">-->
+                <!--<li><a href="#"><i class="fa fa-dashboard"></i> Level</a></li>-->
+               <!--<li class="active">Here</li>-->
+           <!--</ol>-->
+       <!--</section>-->
         {% endblock pageheader %}
 
         <!-- Main content -->
