完善资产地图

--- a/OpsManage/templates/base.html
+++ b/OpsManage/templates/base.html
@@ -182,7 +182,7 @@ desired effect
                         <i class="fa fa-angle-left pull-right"></i>
                     </a>
                     <ul class="treeview-menu">
-                        <li><a href="#"><i class="fa fa-circle-o"></i> 应用试图</a></li>
+                        <li><a href="#"><i class="fa fa-circle-o"></i> 应用视图</a></li>
                         <li><a href="#"><i class="fa fa-circle-o"></i> 应用资源</a></li>
                     </ul>
                 </li>
