--- a/OpsManage/templates/cmdb/assetMap.html
+++ b/OpsManage/templates/cmdb/assetMap.html
@@ -3,6 +3,20 @@
 
 {% block css_block %}
 <link href="/static/dist/css/tab_css.css" type="text/css" rel="stylesheet">
+<style type="text/css">
+    .idcicon{
+        color: #9e0505;
+    }
+
+    .idcinfo {
+        min-height: 180px;
+    }
+
+    span.cabinfo {
+        font-size: 12px;
+    }
+
+</style>
 
 {% endblock css_block %}
 
@@ -10,18 +24,18 @@
 {% block main_content %}
 
 
-<div class="container-fluid no-padding" >
+<div class="container-fluid no-padding">
     <div class="row" style="margin-top: 10px">
 
-        {% for idc in myIdcs %}
+        {% for idc in IDC %}
         <div class="col-sm-6">
             <div class="box box-warning">
                 <!-- .box-header -->
-                <div class="box-header with-border ">
-                    <span class="glyphicon glyphicon-home"></span>
+                <div class="box-header with-border">
+                    <span class="idcicon glyphicon glyphicon-home"></span>
                     <h3 class="box-title">{{ idc.idc_name }}</h3>
                     <span class="fa fa-edit btn pull-right no-margin no-padding" style="font-size: 18px"
-                            onclick="window.open('http://127.0.0.1:8000/cmdb/editIdc?idcId={{ idc.id }}')">
+                          onclick="window.open('http://127.0.0.1:8000/cmdb/editIdc?idcId={{ idc.id }}')">
                     </span>
                 </div>
                 <!-- /.box-header -->
@@ -29,40 +43,41 @@
                 <!-- .box-body -->
                 <div class="box-body">
                     <div class="row">
-                        <div class="text text-justify col-sm-4 border-right no-margin" style="min-height: 160px">
-                            <span style="line-height: 20px">名称 :{{ idc.idc_name}}</span><br>
-                            <span style="line-height: 20px">地址 :{{ idc.idc_address}}</span><br>
-                            <span style="line-height: 20px">备注 :{{ idc.idc_memo}}</span><br>
+                        <div class="idcinfo text col-sm-4 border-right no-margin">
+                            <span class="cabinfo">名称 :{{ idc.idc_name}}</span><br>
+                            <span class="cabinfo">地址 :{{ idc.idc_address}}</span><br>
+                            <span class="cabinfo">备注 :{{ idc.idc_memo}}</span><br>
+                            {% for count in peridc_asset_count %}
+                            {% if count.idc_name == idc.idc_name %}
+                            <span class="cabinfo">主机数量：【 {{ count.data.servercount }} 】台</span><br>
+                            <span class="cabinfo">网络数量：【 {{ count.data.netcount }} 】台</span><br>
+                            <span class="cabinfo">存储数量：【 {{ count.data.securitycount }} 】台</span><br>
+                            <span class="cabinfo">安全数量：【 {{ count.data.storgecount }} 】台</span><br>
+                            {% endif %}
+                            {% endfor %}
 
                         </div>
 
-                        <div class="col-sm-8" >
+                        <div class="col-sm-8">
                             <div id="{{ idc.id }}">
-                            <span>机柜信息 :</span><br>
+                                <span>机柜信息 :</span><br>
 
-
-
-                            {% if cabFlag %}
-                                {% for c in myCabs %}
-                                    <label class="label label-default" style="font-size: 13px;width: 65px;display: inline-block">{{ c.cabinet_name }}</label>
+                                {% for cabinet in idc.cabinet_set.all %}
+                                <label class="label label-default" style="font-size: 13px;width: 65px;display: inline-block">
+                                    {{ cabinet.cabinet_name}}
+                                </label>
                                 {% endfor %}
 
-                                <br><button class="btn btn-xs btn-primary margin-r-5 pull-right" onclick="window.open('http://127.0.0.1:8000/cmdb/cabDetail?idcId={{ idc.id }}')">机柜图</button>
-
-                                <!--<a target="blank" href="http://127.0.0.1:8000/cmdb/editCab?idcId={{ idc.id }}">-->
-                                    <!--<button class="btn btn-xs btn-warning margin-r-5 pull-right" >编辑</button>-->
-                                <!--</a>-->
 
 
-                                <!--<a class="btn btn-xs pull-right" onclick="$('#{{ idc.id }}').load(window.location.href+ ' #{{ idc.id }}')">-->
-                                    <!--<i class="fa fa-fw fa-refresh"></i>-->
-                                <!--</a>-->
-                            {% else %}
-                                <a onclick="var test = window.location.href;if(test.split('?')[1]) url=test+'&IDC={{ idc.id }}'; else url=test+'?IDC={{ idc.id }}';$('#{{ idc.id }}').load(url+ ' #{{ idc.id }}');"
-                                    class="text-center">展示或编辑机柜信息</a>
+                                <!-- ------弹出机柜图------ -->
+                                <br>
+                                <button class="btn btn-xs btn-primary margin-r-5 pull-right"
+                                        onclick="window.open('http://127.0.0.1:8000/cmdb/cabDetail?idcId={{ idc.id }}')">
+                                    机柜图
+                                </button>
 
-                            {% endif %}
-                        </div>
+                            </div>
                         </div>
 
                     </div>
