--- a/OpsManage/templates/cmdb/basicData/userManage.html
+++ b/OpsManage/templates/cmdb/basicData/userManage.html
@@ -73,9 +73,9 @@
             <!-- /.box -->
         </div>
 
-        <!-- ---添加合同-- -->
+        <!-- ---添加用户-- -->
         <div class="col-sm-4">
-         <div class="box box-primary">
+         <div class="box box-primary fixed ">
             <div class="box-header with-border">
               <i class="glyphicon glyphicon-plus"></i>
               <h3 class="box-title">添加用户</h3>
@@ -102,7 +102,8 @@
                 </div>
                 <div class="form-group">
                   <label>用户权限</label>
-                    <select style="width: 66%;margin-left: 2em" name="perm" >
+                    <select class="form-control select2-"  name="perm" >
+                        <option selected>User type</option>
                         <option value="0">普通用户</option>
                         <option value="1">管理员</option>
                     </select>
